--- a/core/res/res/values-el-rGR/custom_strings.xml
+++ b/core/res/res/values-el-rGR/custom_strings.xml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2020-2022 PixelOS
+    Copyright (c) 2020-2023 PixelOS
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+        http://www.apache.org/licenses/LICENSE-2.0
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Global actions -->
-    <string name="reboot_to_bootloader_title">Επανεκκίνηση στον bootloader</string>
-    <string name="reboot_to_bootloader_message">Γίνεται επανεκκίνηση στον bootloader\u2026</string>
-    <string name="reboot_to_recovery_title">Επανεκκίνηση στο recovery</string>
-    <string name="reboot_to_recovery_message">Επανεκκίνηση στο recovery\u2026</string>
-    <string name="reboot_system_title">Επανεκκίνηση συστήματος</string>
-    <string name="reboot_system_message">Επανεκκίνηση συστήματος\u2026</string>
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_fakePackageSignature">Μίμηση υπογραφής πακέτου</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_fakePackageSignature">Επιτρέπει στην εφαρμογή να προσποιείται ότι είναι μια διαφορετική εφαρμογή. Κακόβουλες εφαρμογές μπορεί να είναι σε θέση να χρησιμοποιήσουν αυτή τη λειτουργία για να έχουν πρόσβαση σε προσωπικά σας δεδομένα. Εκχωρήσετε το δικαίωμα αυτό με ιδιαίτερη προσοχή!</string>
+    <!-- Title of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgrouplab_fake_package_signature">Μίμηση υπογραφής πακέτου</string>
+    <!-- Description of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgroupdesc_fake_package_signature">επιτρέπει τη μίμηση υπογραφής πακέτου</string>
+    <!-- Message shown to the user when the apps requests permission from this group. If ever possible this should stay below 80 characters (assuming the parameters takes 20 characters). Don't abbreviate until the message reaches 120 characters though. [CHAR LIMIT=120] -->
+    <string name="permgrouprequest_fake_package_signature">Να επιτρέπεται
+&lt;b&gt;<xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b&gt;να αλλάζει την υπογραφή του πακέτου;</string>
+    <!-- Advanced reboot -->
+    <string name="reboot_to_recovery_title">Λειτουργία αποκατάστασης</string>
+    <string name="reboot_to_recovery_message">Γίνεται επανεκκίνηση σε λειτουργία αποκατάστασης</string>
+    <string name="reboot_to_bootloader_title">Εκκινητής</string>
+    <string name="reboot_to_bootloader_message">Επανεκκίνηση στον εκκινητή</string>
+    <string name="reboot_title">Επανεκκίνηση</string>
+    <string name="reboot_message">Επανεκκίνηση συστήματος</string>
+    <!-- App lock -->
+    <string name="unlock_application">Ξεκλείδωμα <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
     <string name="face_unlock_disabled_idle">Το ξεκλείδωμα προσώπου έχει απενεργοποιηθεί λόγω αδράνειας</string>
+    <!-- LiveDisplay strings -->
+    <string name="live_display_auto">Αυτόματο</string>
+    <string name="live_display_auto_summary">Αυτόματη ρύθμιση της θερμοκρασίας χρώματος της οθόνης μετά τη δύση και την ανατολή του ηλίου</string>
+    <string name="live_display_off">Ανενεργό</string>
+    <string name="live_display_off_summary">Απενεργοποίηση όλων των ρυθμίσεων</string>
+    <string name="live_display_day">Ημέρα</string>
+    <string name="live_display_day_summary">Χρήση μόνο των ρυθμίσεων ημέρας</string>
+    <string name="live_display_night">Νύχτα</string>
+    <string name="live_display_night_summary">Χρήση μόνο των ρυθμίσεων νύχτας</string>
+    <string name="live_display_outdoor">Εξωτερικός χώρος (ήλιος)</string>
+    <string name="live_display_outdoor_summary">Χρήση μόνο των ρυθμίσεων εξωτερικού χώρου</string>
+    <string name="live_display_hint">Το LiveDisplay μπορεί να βοηθήσει στη μείωση της κόπωσης των ματιών και να σας βοηθήσει να κοιμηθείτε τη νύχτα. Κάντε κλικ εδώ για να το δοκιμάσετε!</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay ανενεργό.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: αυτόματη λειτουργία.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: λειτουργία ημέρας.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: λειτουργία νύχτας.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: υπαίθρια λειτουργία.</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">Το LiveDisplay απενεργοποιήθηκε.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">Το LiveDisplay άλλαξε σε αυτόματη λειτουργία.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">Το LiveDisplay άλλαξε σε λειτουργία ημέρας.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">Το LiveDisplay άλλαξε σε λειτουγία νύχτας.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">Το LiveDisplay άλλαξε σε λειτουργία εξωτερικού χώρου.</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Πατήστε και κρατήστε το κουμπί λειτουργίας για να ξεκλειδώσετε</string>
     <string name="pocket_view_title">Η λειτουργία τσέπης είναι ενεργοποιημένη</string>
@@ -32,4 +67,8 @@
     <string name="pocket_view_top_tag_cancel2">Πατήστε παρατεταμένα το κουμπί λειτουργίας για να απενεργοποιήσετε τη λειτουργία τσέπης.</string>
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
+    <!-- Button that copies the url to the log of a crashed application -->
+    <string name="aerr_copy">Αντιγραφή URL αρχείου καταγραφής σφαλμάτων</string>
+    <string name="url_copy_success">Η διεύθυνση URL αντιγράφηκε με επιτυχία</string>
+    <string name="url_copy_failed">Παρουσιάστηκε σφάλμα κατά τη μεταφόρτωση του αρχείου καταγραφής στο Memochō</string>
 </resources>
