--- a/core/res/res/values-es-rES/custom_strings.xml
+++ b/core/res/res/values-es-rES/custom_strings.xml
@@ -1,29 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2020-2022 PixelOS
+    Copyright (c) 2020-2023 PixelOS
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+        http://www.apache.org/licenses/LICENSE-2.0
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Global actions -->
-    <string name="reboot_to_bootloader_title">Reiniciar en modo bootloader</string>
-    <string name="reboot_to_bootloader_message">Reiniciando en modo bootloader\u2026</string>
-    <string name="reboot_to_recovery_title">Reiniciar en modo recovery</string>
-    <string name="reboot_to_recovery_message">Reiniciando en modo recovery\u2026</string>
-    <string name="reboot_system_title">Reiniciar el sistema</string>
-    <string name="reboot_system_message">Reiniciando el sistema\u2026</string>
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_fakePackageSignature">Falsificación de firma de paquete</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_fakePackageSignature">Permite que la aplicación pretenda ser una aplicación diferente. Las aplicaciones maliciosas pueden usar esto para acceder a datos personales. Los usos legítimos incluyen un emulador pretendiendo ser lo que emula. ¡Conceda este permiso con cuidado!</string>
+    <!-- Title of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgrouplab_fake_package_signature">Paquete de falsificación de firma</string>
+    <!-- Description of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgroupdesc_fake_package_signature">permitir la falsificación de la firma del paquete</string>
+    <!-- Message shown to the user when the apps requests permission from this group. If ever possible this should stay below 80 characters (assuming the parameters takes 20 characters). Don't abbreviate until the message reaches 120 characters though. [CHAR LIMIT=120] -->
+    <string name="permgrouprequest_fake_package_signature">¿Quieres permitir que &lt;b&gt;<xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b&gt; falsifique la firma del paquete?</string>
+    <!-- Advanced reboot -->
+    <string name="reboot_to_recovery_title">Recovery</string>
+    <string name="reboot_to_recovery_message">Reiniciando en modo recovery</string>
+    <string name="reboot_to_bootloader_title">Bootloader</string>
+    <string name="reboot_to_bootloader_message">Reiniciando en modo bootloader</string>
+    <string name="reboot_title">Reiniciar</string>
+    <string name="reboot_message">Reiniciando el sistema</string>
+    <!-- App lock -->
+    <string name="unlock_application">Desbloquear <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
     <string name="face_unlock_disabled_idle">Desbloqueo facial desactivado por inactividad</string>
+    <!-- LiveDisplay strings -->
+    <string name="live_display_auto">Automático</string>
+    <string name="live_display_auto_summary">Ajustar automáticamente la temperatura del color de la pantalla después del atardecer y el amanecer</string>
+    <string name="live_display_off">Apagado</string>
+    <string name="live_display_off_summary">Deshabilitar todos los ajustes</string>
+    <string name="live_display_day">Día</string>
+    <string name="live_display_day_summary">Utilizar solo los ajustes de día</string>
+    <string name="live_display_night">Noche</string>
+    <string name="live_display_night_summary">Utilizar solo los ajustes de noche</string>
+    <string name="live_display_outdoor">Al aire libre (luz del sol)</string>
+    <string name="live_display_outdoor_summary">Usar sólo la configuración para el exterior</string>
+    <string name="live_display_hint">LiveDisplay puede reducir la fatiga visual y ayudarte a dormir por la noche. ¡Toca aquí para probarlo!</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay apagado.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: modo automático.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: modo diurno.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: modo nocturno.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: modo al aire libre.</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay desactivado.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay cambiado a modo automático.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay cambió a modo diurno.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay cambió a modo nocturno.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay cambiado a modo exterior.</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Pulse y mantenga el botón de encendido para desbloquear</string>
     <string name="pocket_view_title">Modo bolsillo activado</string>
@@ -32,4 +66,8 @@
     <string name="pocket_view_top_tag_cancel2">Mantén pulsado el botón encendido para desactivar forzosamente el modo bolsillo.</string>
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
+    <!-- Button that copies the url to the log of a crashed application -->
+    <string name="aerr_copy">Copiar URL del registro de errores</string>
+    <string name="url_copy_success">URL copiada con éxito</string>
+    <string name="url_copy_failed">Se ha producido un error al subir el registro a Memochō</string>
 </resources>
