--- a/core/res/res/values-fr-rFR/custom_strings.xml
+++ b/core/res/res/values-fr-rFR/custom_strings.xml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2020-2022 PixelOS
+    Copyright (c) 2020-2023 PixelOS
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+        http://www.apache.org/licenses/LICENSE-2.0
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Global actions -->
-    <string name="reboot_to_bootloader_title">Redémarrage en mode bootloader</string>
-    <string name="reboot_to_bootloader_message">Redémarrage en mode Bootloader\u2026</string>
-    <string name="reboot_to_recovery_title">Redémarrer en mode Recovery</string>
-    <string name="reboot_to_recovery_message">Redémarrage en mode recovery\u2026</string>
-    <string name="reboot_system_title">Redémarrer le système</string>
-    <string name="reboot_system_message">Redémarrage du système\u2026</string>
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_fakePackageSignature">Usurper la signature du paquet</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_fakePackageSignature">Autorise l\'application à se faire passer pour une autre. Des applications malveillantes peuvent l\'utiliser pour accéder à vos données privées. Accordez cette autorisation avec prudence !</string>
+    <!-- Title of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgrouplab_fake_package_signature">Usurper la signature du paquet</string>
+    <!-- Description of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgroupdesc_fake_package_signature">autoriser l\'usurpation de la signature du paquet</string>
+    <!-- Message shown to the user when the apps requests permission from this group. If ever possible this should stay below 80 characters (assuming the parameters takes 20 characters). Don't abbreviate until the message reaches 120 characters though. [CHAR LIMIT=120] -->
+    <string name="permgrouprequest_fake_package_signature">Autoriser
+        &lt;b&gt;<xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b&gt; à usurper la signature du paquet ?</string>
+    <!-- Advanced reboot -->
+    <string name="reboot_to_recovery_title">Recovery</string>
+    <string name="reboot_to_recovery_message">Redémarrage en mode recovery</string>
+    <string name="reboot_to_bootloader_title">Bootloader</string>
+    <string name="reboot_to_bootloader_message">Redémarrage en mode Bootloader</string>
+    <string name="reboot_title">Redémarrer</string>
+    <string name="reboot_message">Redémarrage du système</string>
+    <!-- App lock -->
+    <string name="unlock_application">Déverrouiller <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
     <string name="face_unlock_disabled_idle">Déverrouillage par reconnaissance faciale désactivé en raison de l\'inactivité</string>
+    <!-- LiveDisplay strings -->
+    <string name="live_display_auto">Automatique</string>
+    <string name="live_display_auto_summary">Ajuster automatiquement la température de couleur de l\'écran après le coucher et le lever du soleil</string>
+    <string name="live_display_off">Arrêt</string>
+    <string name="live_display_off_summary">Désactiver tous les réglages</string>
+    <string name="live_display_day">Jour</string>
+    <string name="live_display_day_summary">Utiliser uniquement les paramètres de jour</string>
+    <string name="live_display_night">Nuit</string>
+    <string name="live_display_night_summary">Utiliser uniquement les paramètres de nuit</string>
+    <string name="live_display_outdoor">Extérieur (plein soleil)</string>
+    <string name="live_display_outdoor_summary">Utiliser uniquement les paramètres du mode extérieur</string>
+    <string name="live_display_hint">LiveDisplay peut contribuer à réduire la fatigue oculaire et vous aider à dormir la nuit. Appuyez ici pour l\'essayer !</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay désactivé.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: mode automatique.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: mode jour.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: mode nuit.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: mode extérieur.</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay desactivé.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay est passé en mode automatique.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay est passé en mode jour.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay est passé en mode nuit.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay est passé en mode extérieur.</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Appuyez et maintenez le bouton d\'alimentation pour déverrouiller</string>
     <string name="pocket_view_title">Le mode poche est activé</string>
@@ -32,4 +67,8 @@
     <string name="pocket_view_top_tag_cancel2">Appuyez longuement sur le bouton d\'alimentation pour quitter le mode poche.</string>
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
+    <!-- Button that copies the url to the log of a crashed application -->
+    <string name="aerr_copy">Copier l\'URL du rapport d\'erreur</string>
+    <string name="url_copy_success">URL copiée avec succès</string>
+    <string name="url_copy_failed">Une erreur s\'est produite lors de l\'envoi du rapport d\'erreurs</string>
 </resources>
