--- a/core/res/res/values-uk-rUA/custom_strings.xml
+++ b/core/res/res/values-uk-rUA/custom_strings.xml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2020-2022 PixelOS
+    Copyright (c) 2020-2023 PixelOS
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+        http://www.apache.org/licenses/LICENSE-2.0
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Global actions -->
-    <string name="reboot_to_bootloader_title">Перезавантажитись у Bootloader</string>
-    <string name="reboot_to_bootloader_message">Перезавантаження у Bootloader\u2026</string>
-    <string name="reboot_to_recovery_title">Перезавантаження в Режим відновлення</string>
-    <string name="reboot_to_recovery_message">Перезавантаження у Recovery\u2026</string>
-    <string name="reboot_system_title">Перезавантажити систему</string>
-    <string name="reboot_system_message">Перезавантаження системи\u2026</string>
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_fakePackageSignature">Дозволити підміну підпису додатка</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_fakePackageSignature">Дозволяти програмі видавати себе за іншу програму. Небезпечні програми можуть отримати доступ до приватних даних користувача. Будьте обережні під час надання цього дозволу!</string>
+    <!-- Title of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgrouplab_fake_package_signature">Дозволити підміну підпису</string>
+    <!-- Description of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgroupdesc_fake_package_signature">дозволити підміняти підпис пакету</string>
+    <!-- Message shown to the user when the apps requests permission from this group. If ever possible this should stay below 80 characters (assuming the parameters takes 20 characters). Don't abbreviate until the message reaches 120 characters though. [CHAR LIMIT=120] -->
+    <string name="permgrouprequest_fake_package_signature">Дозволити
+        &lt;b&gt;<xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b&gt; підробити підпис пакету?</string>
+    <!-- Advanced reboot -->
+    <string name="reboot_to_recovery_title">Режим відновлення</string>
+    <string name="reboot_to_recovery_message">Перевантажити у режим відновлення</string>
+    <string name="reboot_to_bootloader_title">Завантажувач</string>
+    <string name="reboot_to_bootloader_message">Перезавантажити у режим завантажувача</string>
+    <string name="reboot_title">Перезавантажити</string>
+    <string name="reboot_message">Перезавантаження системи</string>
+    <!-- App lock -->
+    <string name="unlock_application">Розблокувати <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
     <string name="face_unlock_disabled_idle">Розблокування обличчям вимкнено через неактивність</string>
+    <!-- LiveDisplay strings -->
+    <string name="live_display_auto">Автоматично</string>
+    <string name="live_display_auto_summary">Автоматичне підлаштування температури кольору екрана після сходу та заходу сонця</string>
+    <string name="live_display_off">Вимк</string>
+    <string name="live_display_off_summary">Вимкнути всі налаштування</string>
+    <string name="live_display_day">День</string>
+    <string name="live_display_day_summary">Використовувати тільки денні параметри</string>
+    <string name="live_display_night">Ніч</string>
+    <string name="live_display_night_summary">Використовувати тільки нічні параметри</string>
+    <string name="live_display_outdoor">На вулиці (яскраве сонце)</string>
+    <string name="live_display_outdoor_summary">Тільки налаштуванння для вулиці</string>
+    <string name="live_display_hint">LiveDisplay допоможе зменшити навантаження на зір та покращить Ваш сон. Натисніть тут, щоб спробувати!</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay вимкнено.</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay: автоматичний режим.</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay: денний режим.</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay: нічний режим.</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay: режим на вулиці.</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay вимкнено.</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay змінено до автоматичного режиму.</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay змінено до денного режиму.</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay змінено до нічного режиму.</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay змінено до режиму на вулиці.</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">Натисніть та утримуйте кнопку живлення, щоб розблокувати</string>
     <string name="pocket_view_title">Режим \"У кишені\" увімкнено</string>
@@ -32,4 +67,8 @@
     <string name="pocket_view_top_tag_cancel2">Натисніть й утримуйте кнопку живлення, щоб примусово вийти з режиму \"У кишені\".</string>
     <string name="pocket_view_top_tag_number1">\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
+    <!-- Button that copies the url to the log of a crashed application -->
+    <string name="aerr_copy">Копіювати URL логу збою</string>
+    <string name="url_copy_success">Посилання вдало скопійовано</string>
+    <string name="url_copy_failed">Під час завантаження логу на сервіс dogbin відбулася помилка</string>
 </resources>
