--- a/core/res/res/values-zh-rCN/custom_strings.xml
+++ b/core/res/res/values-zh-rCN/custom_strings.xml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2020-2022 PixelOS
+    Copyright (c) 2020-2023 PixelOS
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+        http://www.apache.org/licenses/LICENSE-2.0
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Global actions -->
-    <string name="reboot_to_bootloader_title">重启至 Bootloader</string>
-    <string name="reboot_to_bootloader_message">正在重启至 Bootloader\u2026</string>
-    <string name="reboot_to_recovery_title">重启至 Recovery</string>
-    <string name="reboot_to_recovery_message">正在重启至 Recovery\u2026</string>
-    <string name="reboot_system_title">重启系统</string>
-    <string name="reboot_system_message">正在重启系统\u2026</string>
+    <!-- Title of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permlab_fakePackageSignature">伪装软件包签名</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_fakePackageSignature">允许应用伪装为其他应用。恶意应用程序可访问隐私数据。请谨慎授予此权限！</string>
+    <!-- Title of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgrouplab_fake_package_signature">伪装软件包签名</string>
+    <!-- Description of a category of application permissions, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permgroupdesc_fake_package_signature">允许软件伪造签名</string>
+    <!-- Message shown to the user when the apps requests permission from this group. If ever possible this should stay below 80 characters (assuming the parameters takes 20 characters). Don't abbreviate until the message reaches 120 characters though. [CHAR LIMIT=120] -->
+    <string name="permgrouprequest_fake_package_signature">允许
+        &lt;b&gt;<xliff:g id="app_name" example="Gmail">%1$s</xliff:g>&lt;/b&gt; 伪装软件包签名吗？</string>
+    <!-- Advanced reboot -->
+    <string name="reboot_to_recovery_title">Recovery</string>
+    <string name="reboot_to_recovery_message">正在重启至 Recovery</string>
+    <string name="reboot_to_bootloader_title">Bootloader</string>
+    <string name="reboot_to_bootloader_message">正在重启至 Bootloader</string>
+    <string name="reboot_title">重启</string>
+    <string name="reboot_message">正在重启系统</string>
+    <!-- App lock -->
+    <string name="unlock_application">解锁 <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
     <!-- Face unlock -->
     <string name="face_unlock_disabled_idle">面部解锁因不活跃被禁用</string>
+    <!-- LiveDisplay strings -->
+    <string name="live_display_auto">自动</string>
+    <string name="live_display_auto_summary">根据日出日落调节屏幕色温</string>
+    <string name="live_display_off">关闭</string>
+    <string name="live_display_off_summary">禁用所有调整</string>
+    <string name="live_display_day">日间</string>
+    <string name="live_display_day_summary">仅在日间使用设置</string>
+    <string name="live_display_night">夜间</string>
+    <string name="live_display_night_summary">仅在夜间使用设置</string>
+    <string name="live_display_outdoor">户外模式（强光）</string>
+    <string name="live_display_outdoor_summary">仅在户外使用设置</string>
+    <string name="live_display_hint">LiveDisplay 能减轻眼疲劳，并在夜间帮助您入睡。</string>
+    <string name="accessibility_quick_settings_live_display_off">LiveDisplay 关闭。</string>
+    <string name="accessibility_quick_settings_live_display_auto">LiveDisplay：自动模式</string>
+    <string name="accessibility_quick_settings_live_display_day">LiveDisplay：日间模式</string>
+    <string name="accessibility_quick_settings_live_display_night">LiveDisplay：夜间模式</string>
+    <string name="accessibility_quick_settings_live_display_outdoor">LiveDisplay：户外模式</string>
+    <string name="accessibility_quick_settings_live_display_changed_off">LiveDisplay 已关闭</string>
+    <string name="accessibility_quick_settings_live_display_changed_auto">LiveDisplay 已切换为自动模式</string>
+    <string name="accessibility_quick_settings_live_display_changed_day">LiveDisplay 已切换为日间模式</string>
+    <string name="accessibility_quick_settings_live_display_changed_night">LiveDisplay 已切换为夜间模式</string>
+    <string name="accessibility_quick_settings_live_display_changed_outdoor">LiveDisplay 已切换为户外模式</string>
     <!-- Pocket Lock -->
     <string name="pocket_lock_message_long_press">长按电源键以解锁</string>
     <string name="pocket_view_title">口袋模式已开启</string>
@@ -32,4 +67,8 @@
     <string name="pocket_view_top_tag_cancel2">长按电源键强制退出口袋模式</string>
     <string name="pocket_view_top_tag_number1">1.\u0020</string>
     <string name="pocket_view_top_tag_number2">2.\u0020</string>
+    <!-- Button that copies the url to the log of a crashed application -->
+    <string name="aerr_copy">复制崩溃日志链接</string>
+    <string name="url_copy_success">链接复制成功</string>
+    <string name="url_copy_failed">向 Memochō 上传日志时发生错误</string>
 </resources>
