--- a/packages/SystemUI/res/values-in-rID/custom_strings.xml
+++ b/packages/SystemUI/res/values-in-rID/custom_strings.xml
@@ -67,7 +67,7 @@
     <string name="quick_settings_sound_silent">Senyap</string>
     <!-- Advanced Reboot -->
     <string name="global_action_restart_advanced">Lanjutan</string>
-    <string name="global_action_restart_recovery">Pemulihan</string>
+    <string name="global_action_restart_recovery">Recovery</string>
     <string name="global_action_restart_bootloader">Bootloader</string>
     <string name="global_action_restart_ui">SistemUI</string>
     <!-- Data usage info in QS footer -->
@@ -107,7 +107,7 @@
     <string name="quick_settings_anti_flicker">Anti kerlip</string>
     <!-- PowerShare QS tile -->
     <string name="quick_settings_powershare_label">PowerShare Nirkabel</string>
-    <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare nonaktif\nPenghemat baterai</string>
+    <string name="quick_settings_powershare_off_powersave_label">PowerShare Nirkabel nonaktif\nPenghemat baterai</string>
     <string name="quick_settings_powershare_off_low_battery_label">PowerShare Nirkabel nonaktif\nBaterai terlalu lemah</string>
     <string name="quick_settings_powershare_enabled_label">PowerShare Nirkabel diaktifkan</string>
     <!-- Label for UI element which allows deleting the screenshot [CHAR LIMIT=30] -->
